# grpc-gateway

./: WORKSPACE  go.mod
codegenerator/: BUILD.bazel
examples/internal/clients/abe/: BUILD.bazel
examples/internal/clients/echo/: BUILD.bazel
examples/internal/clients/generateunboundmethods/: BUILD.bazel
examples/internal/clients/responsebody/: BUILD.bazel
examples/internal/clients/unannotatedecho/: BUILD.bazel
examples/internal/cmd/example-gateway-server/: BUILD.bazel
examples/internal/cmd/example-grpc-server/: BUILD.bazel
examples/internal/gateway/: BUILD.bazel
examples/internal/helloworld/: BUILD.bazel
examples/internal/integration/: BUILD.bazel
examples/internal/proto/examplepb/: BUILD.bazel
examples/internal/proto/pathenum/: BUILD.bazel
examples/internal/proto/sub/: BUILD.bazel
examples/internal/proto/sub2/: BUILD.bazel
examples/internal/server/: BUILD.bazel
internal/: BUILD.bazel
internal/casing/: BUILD.bazel
protoc-gen-grpc-gateway/: BUILD.bazel
protoc-gen-grpc-gateway/descriptor/: BUILD.bazel
protoc-gen-grpc-gateway/generator/: BUILD.bazel
protoc-gen-grpc-gateway/httprule/: BUILD.bazel
protoc-gen-grpc-gateway/internal/gengateway/: BUILD.bazel
protoc-gen-swagger/: BUILD.bazel
protoc-gen-swagger/genswagger/: BUILD.bazel
protoc-gen-swagger/options/: BUILD.bazel
runtime/: BUILD.bazel
runtime/internal/examplepb/: BUILD.bazel
utilities/: BUILD.bazel
