load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "codegenerator",
    srcs = [
        "doc.go",
        "parse_req.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/codegenerator",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "codegenerator_test",
    srcs = ["parse_req_test.go"],
    deps = [
        ":codegenerator",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)
