load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "internal_proto",
    srcs = ["errors.proto"],
    visibility = ["//:__subpackages__"],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "internal_go_proto",
    importpath = "github.com/grpc-ecosystem/grpc-gateway/internal",
    proto = ":internal_proto",
    visibility = ["//:__subpackages__"],
)

go_library(
    name = "internal",
    embed = [":internal_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/internal",
    visibility = ["//:__subpackages__"],
)
