load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "protoc-gen-grpc-gateway_lib",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway",
    visibility = ["//visibility:private"],
    deps = [
        "//codegenerator",
        "//protoc-gen-grpc-gateway/descriptor",
        "//protoc-gen-grpc-gateway/internal/gengateway",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_binary(
    name = "protoc-gen-grpc-gateway",
    embed = [":protoc-gen-grpc-gateway_lib"],
    visibility = ["//visibility:public"],
)
