load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "protoc-gen-swagger_lib",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger",
    visibility = ["//visibility:private"],
    deps = [
        "//codegenerator",
        "//protoc-gen-grpc-gateway/descriptor",
        "//protoc-gen-swagger/genswagger",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_binary(
    name = "protoc-gen-swagger",
    embed = [":protoc-gen-swagger_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "protoc-gen-swagger_test",
    srcs = ["main_test.go"],
    embed = [":protoc-gen-swagger_lib"],
)
