load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "utilities",
    srcs = [
        "doc.go",
        "pattern.go",
        "readerfactory.go",
        "trie.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/utilities",
    visibility = ["//visibility:public"],
)

go_test(
    name = "utilities_test",
    srcs = ["trie_test.go"],
    deps = [":utilities"],
)
