load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "descriptor",
    srcs = [
        "grpc_api_configuration.go",
        "grpc_api_service.go",
        "registry.go",
        "services.go",
        "types.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway/descriptor",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/casing",
        "//protoc-gen-grpc-gateway/httprule",
        "@com_github_ghodss_yaml//:yaml",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/api:annotations_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)

go_test(
    name = "descriptor_test",
    srcs = [
        "grpc_api_configuration_test.go",
        "registry_test.go",
        "services_test.go",
        "types_test.go",
    ],
    embed = [":descriptor"],
    deps = [
        "//protoc-gen-grpc-gateway/httprule",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
