load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "httprule",
    srcs = [
        "compile.go",
        "parse.go",
        "types.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway/httprule",
    visibility = ["//visibility:public"],
    deps = [
        "//utilities",
        "@com_github_golang_glog//:glog",
    ],
)

go_test(
    name = "httprule_test",
    srcs = [
        "compile_test.go",
        "parse_test.go",
        "types_test.go",
    ],
    embed = [":httprule"],
    deps = [
        "//utilities",
        "@com_github_golang_glog//:glog",
    ],
)
