load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "genswagger",
    srcs = [
        "doc.go",
        "generator.go",
        "helpers.go",
        "helpers_go111_old.go",
        "template.go",
        "types.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/genswagger",
    visibility = ["//visibility:public"],
    deps = [
        "//internal",
        "//internal/casing",
        "//protoc-gen-grpc-gateway/descriptor",
        "//protoc-gen-grpc-gateway/generator",
        "//protoc-gen-swagger/options",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//descriptor:go_default_library_gen",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
    ],
)

go_test(
    name = "genswagger_test",
    srcs = ["template_test.go"],
    embed = [":genswagger"],
    deps = [
        "//protoc-gen-grpc-gateway/descriptor",
        "//protoc-gen-grpc-gateway/httprule",
        "//protoc-gen-swagger/options",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
        "@io_bazel_rules_go//proto/wkt:struct_go_proto",
    ],
)
