load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "doc.go",
        "gateway.go",
        "handlers.go",
        "main.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/gateway",
    visibility = ["//examples:__subpackages__"],
    deps = [
        "//examples/internal/proto/examplepb",
        "//runtime",
        "@com_github_golang_glog//:glog",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//connectivity",
    ],
)
