load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "integration_test",
    srcs = [
        "client_test.go",
        "fieldmask_test.go",
        "integration_test.go",
        "main_test.go",
        "proto_error_test.go",
    ],
    deps = [
        "//examples/internal/clients/abe",
        "//examples/internal/clients/echo",
        "//examples/internal/clients/unannotatedecho",
        "//examples/internal/gateway",
        "//examples/internal/proto/examplepb",
        "//examples/internal/proto/pathenum",
        "//examples/internal/proto/sub",
        "//examples/internal/server",
        "//runtime",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//descriptor:go_default_library_gen",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@org_golang_google_grpc//codes",
    ],
)
