load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "a_bit_of_everything.go",
        "echo.go",
        "fieldmask_helper.go",
        "flow_combination.go",
        "main.go",
        "non_standard_names.go",
        "responsebody.go",
        "unannotatedecho.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/server",
    visibility = ["//examples:__subpackages__"],
    deps = [
        "//examples/internal/proto/examplepb",
        "//examples/internal/proto/pathenum",
        "//examples/internal/proto/sub",
        "//examples/internal/proto/sub2",
        "//internal/casing",
        "//runtime",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_rogpeppe_fastuuid//:fastuuid",
        "@go_googleapis//google/rpc:errdetails_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:field_mask_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "server_test",
    srcs = ["fieldmask_helper_test.go"],
    embed = [":server"],
    deps = ["@io_bazel_rules_go//proto/wkt:field_mask_go_proto"],
)
