load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gengateway",
    srcs = [
        "doc.go",
        "generator.go",
        "template.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-grpc-gateway/internal/gengateway",
    visibility = ["//protoc-gen-grpc-gateway:__subpackages__"],
    deps = [
        "//internal/casing",
        "//protoc-gen-grpc-gateway/descriptor",
        "//protoc-gen-grpc-gateway/generator",
        "//utilities",
        "@com_github_golang_glog//:glog",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:compiler_plugin_go_proto",
    ],
)

go_test(
    name = "gengateway_test",
    srcs = [
        "generator_test.go",
        "template_test.go",
    ],
    embed = [":gengateway"],
    deps = [
        "//protoc-gen-grpc-gateway/descriptor",
        "//protoc-gen-grpc-gateway/httprule",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:descriptor_go_proto",
    ],
)
