load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "echo",
    srcs = [
        "api_echo_service.go",
        "client.go",
        "configuration.go",
        "model_examplepb_embedded.go",
        "model_examplepb_simple_message.go",
        "model_protobuf_any.go",
        "model_runtime_error.go",
        "response.go",
    ],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/clients/echo",
    visibility = ["//examples:__subpackages__"],
    deps = [
        "@com_github_antihax_optional//:optional",
        "@org_golang_x_oauth2//:oauth2",
    ],
)
