load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "example-grpc-server_lib",
    srcs = ["main.go"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/cmd/example-grpc-server",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/internal/server",
        "@com_github_golang_glog//:glog",
    ],
)

go_binary(
    name = "example-grpc-server",
    embed = [":example-grpc-server_lib"],
    visibility = ["//examples:__subpackages__"],
)
