load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "examplepb_proto",
    srcs = [
        "a_bit_of_everything.proto",
        "echo_service.proto",
        "flow_combination.proto",
        "generate_unbound_methods.proto",
        "generated_input.proto",
        "non_standard_names.proto",
        "response_body_service.proto",
        "stream.proto",
        "swagger_merge_a.proto",
        "swagger_merge_b.proto",
        "unannotated_echo_service.proto",
        "use_go_template.proto",
        "wrappers.proto",
    ],
    visibility = ["//examples:__subpackages__"],
    deps = [
        "//examples/internal/proto/pathenum:pathenum_proto",
        "//examples/internal/proto/sub:sub_proto",
        "//examples/internal/proto/sub2:sub2_proto",
        "//protoc-gen-swagger/options:options_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@com_google_protobuf//:wrappers_proto",
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "examplepb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/proto/examplepb",
    proto = ":examplepb_proto",
    visibility = ["//examples:__subpackages__"],
    deps = [
        "//examples/internal/proto/pathenum",
        "//examples/internal/proto/sub",
        "//examples/internal/proto/sub2",
        "//protoc-gen-swagger/options",
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "examplepb",
    srcs = [
        "a_bit_of_everything.pb.gw.go",
        "echo_service.pb.gw.go",
        "flow_combination.pb.gw.go",
        "generate_unbound_methods.pb.gw.go",
        "non_standard_names.pb.gw.go",
        "response_body_service.pb.gw.go",
        "stream.pb.gw.go",
        "unannotated_echo_service.pb.gw.go",
        "use_go_template.pb.gw.go",
        "wrappers.pb.gw.go",
    ],
    embed = [":examplepb_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/proto/examplepb",
    visibility = ["//examples:__subpackages__"],
    deps = [
        "//examples/internal/proto/pathenum",
        "//examples/internal/proto/sub",
        "//examples/internal/proto/sub2",
        "//runtime",
        "//utilities",
        "@com_github_golang_protobuf//descriptor:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:wrappers_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//grpclog",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
    ],
)
