load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pathenum_proto",
    srcs = ["path_enum.proto"],
    visibility = ["//examples:__subpackages__"],
)

go_proto_library(
    name = "pathenum_go_proto",
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/proto/pathenum",
    proto = ":pathenum_proto",
    visibility = ["//examples:__subpackages__"],
)

go_library(
    name = "pathenum",
    embed = [":pathenum_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/proto/pathenum",
    visibility = ["//examples:__subpackages__"],
)
