load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "sub2_proto",
    srcs = ["message.proto"],
    visibility = ["//examples:__subpackages__"],
)

go_proto_library(
    name = "sub2_go_proto",
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/proto/sub2",
    proto = ":sub2_proto",
    visibility = ["//examples:__subpackages__"],
)

go_library(
    name = "sub2",
    embed = [":sub2_go_proto"],
    importpath = "github.com/grpc-ecosystem/grpc-gateway/examples/internal/proto/sub2",
    visibility = ["//examples:__subpackages__"],
)
